k8s/nginx-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  nginx-demo-service
  namespace: nginx-demo
spec:
  selector:
    app:  nginx-demo
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
