k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  namespace: nginx-demo
  labels:
    name: nginx-demo-ingress
spec:
  rules:
  - host: "nginx-demo.kube-demo-1.home.cloudnative.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-demo-service
            port: 
              number: 80
